BuildingsPy Changelog
---------------------

Version 1.7.0, March 20, 2018 -- Release 1.7
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- Updated buildingspy.development.refactor.move_class() to
  correct a bug that caused package.mo to not be generated
  if the new class is deeper in the class hierarchy.
- Updated buildingspy.development.refactor.write_package_order() to
  correct a bug in generating package.order file for package-level
  constants.
- Extend class buildingspy.development.validator
  to check the consistency and correctness of .mos and .mo files.
- Added validation of .mos/.mo files to unit test script.

Version 1.6.0, March 29, 2017 -- Release 1.6
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- In development.regressiontest.setSinglePackage(packageName), added
  option to provide a comma-separated list to allow checking multiple
  packages.
- In simulate.Simulator, changed quotes of string arguments for
  Modelica parameters.
- In development.regressiontest, added check for redundant connections.
- Updated buildingspy.development.refactor.move_class()
  to allow moving whole packages.
- Updated buildingspy.development.refactor.write_package_order()
  so that also types that are enumerations are added to the package.order file.
- Corrected TypeError during parsing of an exception that led to a wrong
  error message.
- In regression tests for Dymola, added check for missing stateGraphRoot.

Version 1.5.0, March 29, 2016 -- Release 1.5
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- Added module fmi with a function that outputs fmu dependencies.
- Added regression tests for OpenModelica.
- Changed implementation of addParameters(...) to allow
  setting values of parameters that are arrays.
- Corrected bug that lead to files such as .DStore in Resources/Scripts
  to be processed as if they were scripts that run unit tests.
- Added class buildingspy.development.merger, which can be used
  to merge the Annex60 Modelica library to other Modelica libraries,