@@ -3,6 +3,8 @@ BuildingsPy Changelog
 
 Version 1.7.0, March 20, 2018 -- Release 1.7
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+- Updated buildingspy.development.merger to filter out certain files,
+  such as the top-level *.c and *.mat files.
 - Updated buildingspy.development.refactor.move_class() to
   correct a bug that caused package.mo to not be generated
   if the new class is deeper in the class hierarchy.
